books/projects/rac/tests/yaml_test/program_structure/rac-in-comment-but-not-a-guard.ref.stderr
rac-in-comment-but-not-a-guard.cpp:3: syntax error, unexpected RAC
