books/projects/rac/tests/yaml_test/program_structure/rac-in-comment-but-not-a-guard.cpp
// RAC begin

// Rac: this is a comment not a guard

int foo()
{
  return 2;
}

// RAC end
